# onrobot_gripper_ros2

./: LICENSE  README.md
onrobot_2fg7/: CMakeLists.txt  package.xml
onrobot_2fg7/include/: onrobot_server.hpp  twofg_xmlrpc.hpp
onrobot_2fg7/launch/: onrobot_launch.py
onrobot_2fg7/src/: onrobot_server.cpp  onrobot_server_node.cpp  twofg_xmlrpc.cpp
onrobot_msgs/: CMakeLists.txt  package.xml
onrobot_msgs/srv/: GetExtWidth.srv  GetFingerValues.srv  GetIntWidth.srv  GetMaxMinWidth.srv  GripExternal.srv  GripInternal.srv  IsConn.srv  IsGripped.srv
